Fix spacing

--- a/assets/scss/common/_custom.scss
+++ b/assets/scss/common/_custom.scss
@@ -34,6 +34,8 @@ tr:nth-child(even) {
     }
 }
 
-li {
-    margin-bottom: 15px;
+.docs-content {
+    li {
+        margin-bottom: 15px;
+    }
 }
